# Full-Stack-AI-Chat-with-Rust-and-React

./: .gitattributes  README.md  rust.md
ai_api/: Cargo.toml
ai_api/src/: api.rs  error.rs  handlers.rs  main.rs  services.rs
frontend/src/: App.tsx  index.css
rust_chat_client/: Cargo.toml  README.md  info.md
