[package]
name = "rust_chat_client"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11"
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
actix-cors = "0.7"
llama-cpp-2 = "0.1.109"
thiserror = "2.0.12"
